<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp"
    tools:context="com.nordicid.nurfwupdate.MainActivity">

    <TextView
        android:id="@+id/text_current_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/rectangle"
        android:text="@string/text_not_connected" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_device"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_search_devices"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="handleButtonClick">
        </Button>

        <Button
            android:id="@+id/btn_file_select"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_file_select"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="handleButtonClick">
        </Button>

        <Button
            android:id="@+id/btn_file_program"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/text_file_program"
            android:textStyle="bold"
            android:textSize="20sp"
            android:onClick="handleButtonClick">
        </Button>

    </LinearLayout>

    <TextView
        android:id="@+id/text_filename"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center"
        android:background="@drawable/rectangle"
        android:padding="2dp"
        android:text="@string/text_file_na" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:background="@drawable/rectangle"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_progress"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/text_idle" />

        <ProgressBar
            android:id="@+id/progress_upload"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="2dp"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:max="100">
        </ProgressBar>

    </LinearLayout>

</LinearLayout>
